--- a/Style.css
+++ b/Style.css
@@ -463,7 +463,7 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0 ;
 }
 
 .To-Do-n {
@@ -493,7 +493,7 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
 }
 
 .Login-n {
